# capstone-projects-portal

./: .gitignore  .pre-commit-config.yaml  404.html  Caddyfile  Pipfile  README.md  biome.json  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: backend_ci.yml  frontend_ci.yml
admin-guide/: index.html
api/: index.html
backend/: Dockerfile
backend/config/: settings.py  urls.py
backend/portal/: admin.py  apps.py  emails.py  jobs.py  login_views.py  models.py
backend/portal/fixtures/: realistic_dummy_data.json
backend/portal/tests/: test_clientorg_model.py  test_login_views.py  test_models.py
backend/scripts/: setup_db.py
deployment/: gunicorn.service  index.html  redeploy.sh
docker-compose-deployment/: index.html
docs/: deployment.md  docker-compose-deployment.md  environment-variables.md  index.md  testing.md  user-guide.md
environment-variables/: index.html
frontend/: .prettierrc.mjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.workspace.ts
frontend/public/: manifest.json
frontend/scripts/: install-e2e-browsers.sh
frontend/src/: App.tsx  hooks.ts  index.tsx  test-utils.tsx  theme.ts  vite-env.d.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: config.ts  portal-api.ts
frontend/src/components/: ClientCard.tsx  (+24 more)
list-of-all-documents/: index.html
search/: search_index.json
testing/: index.html
user-guide/: index.html
(+58 files in other folders)
