[project]
name = "capstone-projects-portal"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "django~=5.2.1",
    "django-environ~=0.12.0",
    "psycopg[binary]~=3.2.7",
    "pillow~=11.2.1",
    "djangorestframework~=3.16.0",
    "pytz>=2025.2",
    "django-cors-headers~=4.7.0",
    "drf-spectacular~=0.28.0",
    "requests~=2.32.3",
    "django-admin-list-filter-dropdown~=1.0.3",
    "gunicorn~=23.0.0",
    "pandas~=2.2.3",
]

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "flake8",
    "black",
    "pre-commit",
    "mdx-truly-sane-lists",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
