[project]
name = "capstone-projects-portal"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "django~=5.2.1",
    "django-environ~=0.12.0",
    "psycopg[binary]~=3.2.7",
    "pillow~=11.2.1",
    "djangorestframework~=3.16.0",
    "pytz>=2025.2",
    "django-cors-headers~=4.7.0",
    "drf-spectacular~=0.28.0",
    "requests~=2.32.3",
    "django-admin-list-filter-dropdown~=1.0.3",
    "gunicorn~=23.0.0",
    "pandas~=2.2.3",
]

[dependency-groups]
dev = [
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.6.14",
    "flake8~=7.2.0",
    "black~=25.1.0",
    "pre-commit~=4.2.0",
    "mdx-truly-sane-lists~=1.3",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
